# Different-Types_of_RAG

./: .gitignore  README.md  app.py  embedding_utils.py  ingest.py  pyproject.toml  requirements.txt
indices/Hands-On_Large_Language_Models/: index.pkl
indices/Hands-On_Machine_Learining/: index.pkl
langgraph_workflow/: adaptive_rag.py  agentic_rag.py  base_workflow.py  corrective_rag.py  hybrid_rag.py
